web/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
      containers:
        - name: web
          securityContext:
            capabilities:
              drop:
                - all
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          image: us-east4-docker.pkg.dev/mygke-756/containers/web:025ee69
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 2m
              memory: 47Mi
            limits:
              cpu: 61m
              memory: 160Mi
          readinessProbe:
            httpGet:
              port: 8080
              path: /health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /health/liveness
      nodeSelector:
        kubernetes.io/os: linux
