web/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: web
